--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <p class="pop-up__body title">Leave your information and we will contact you</p>
                             <form action="" class="pop-up__body form">
                                 <input class="form__input" type="text" placeholder="Name" name="name" required>
-                                <input class="form__input" type="phone" placeholder="Phone number" name="phone" required>
+                                <input class="form__input" type="tel" placeholder="Phone number" name="phone" required>
                                 <button class="form__button" type="submit" name="sub" value="ОТПРАВИТЬ">Reserve a table</button>
                             </form>
                             <div id="erconts"></div>
